Add rendered examples and improve template branding
- Add examples/ folder with all 11 templates rendered
- Add index.html gallery page for GitHub Pages
- Add GitHub Actions workflow for examples deployment
- Make templates self-contained with local _ua-colors.scss copies
- Fix agenda template: proper table column widths with tbl-colwidths
- Fix report template: remove duplicate title page
- Fix letter template: add UA brand colors and red separator line
- Fix document template: HTML-only with format-links disabled
- Fix one-pager template: add format-links: false
- Add embed-resources: true to presentation template
- Update README with WIP notice and detailed logo instructions
- Remove screenshots/ (replaced by examples/)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Rendered outputs
+# Rendered outputs (except examples/)
 *.html
 *.pdf
+!examples/**/*.html
+!examples/**/*.pdf
 !assets/**/*.pdf
 /_site/
 /_book/
